# cpp-lib-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
build_scripts/: build.sh  chown_build_files.sh  internal_build.sh  linux.Dockerfile  setup-vcpkg.sh  ubuntu.Dockerfile
src/: CMakeLists.txt  PublicClass.cpp
src/include/clt/: PublicClass.hpp
test/: CMakeLists.txt  PublicClass.test.cpp
